--- a/euro2016.html
+++ b/euro2016.html
@@ -20,11 +20,19 @@
       </div>
       
       <div id="stage" class="board" width="410" height="410"></div>
-      <div class="notification hidden">As cartas serão baralhadas!</div>
+      <!--<div class="notification hidden">As cartas serão baralhadas!</div>-->
     </div>
 
     <div>
       <button id="restartbtn">Reiniciar (Espaço)</button>
+    </div>
+
+    <!-- Mensagem da vitória -->
+    <div id="winModal" class="hidden">
+      <div class="modal-content">
+        <h2>Parabéns! Encontrou todos os pares!</h2>
+        <button id="closeModal">Fechar</button>
+      </div>
     </div>
 
 
